--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
 		"vue-router": "^4.3.2"
 	},
 	"devDependencies": {
+		"@nuxt/types": "^2.18.1",
+		"@nuxtjs/i18n": "^8.3.1",
 		"@nuxtjs/tailwindcss": "^6.12.0",
 		"typescript": "^5.4.5"
 	}
