--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
 	},
 	"devDependencies": {
 		"@nuxt/types": "^2.18.1",
+		"@nuxtjs/color-mode": "^3.4.2",
 		"@nuxtjs/i18n": "^8.3.1",
 		"@nuxtjs/tailwindcss": "^6.12.0",
 		"typescript": "^5.4.5"
