--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
 	},
 	"dependencies": {
 		"@nuxtjs/google-fonts": "^3.2.0",
+		"@vueuse/core": "^10.11.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"embla-carousel-vue": "^8.1.8",
 		"lucide-vue-next": "^0.390.0",
 		"nuxt": "^3.11.2",
 		"radix-vue": "^1.8.3",
