feat: added global projects and spinner

--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
 	},
 	"dependencies": {
 		"@nuxtjs/google-fonts": "^3.2.0",
+		"@pinia/nuxt": "^0.5.2",
 		"@vueuse/core": "^10.11.0",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
 		"embla-carousel-vue": "^8.1.8",
 		"lucide-vue-next": "^0.390.0",
 		"nuxt": "^3.11.2",
+		"pinia": "^2.2.0",
 		"radix-vue": "^1.8.3",
 		"shadcn-nuxt": "^0.10.4",
 		"tailwind-merge": "^2.3.0",
