--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
 		"postinstall": "nuxt prepare"
 	},
 	"dependencies": {
+		"@nuxt/image": "^1.7.0",
 		"@nuxtjs/google-fonts": "^3.2.0",
 		"@pinia/nuxt": "^0.5.2",
 		"@vueuse/core": "^10.11.0",
